<resources>
    <string name="app_name">Sample_OiTi_Android</string>
    <string name="main_title">Selecione uma opção</string>
    <string name="logo_description">imagem de logo</string>
    <string name="face_icon_description">icone de scan facial</string>
    <string name="biometria_button_text">Nam dapibus nisl vitae elit</string>
    <string name="biometria_title_text">Biometria</string>
    <string name="camera_access_title">Acesso à camera</string>
    <string name="camera_access_text">O App utiliza o acesso à câmera somente no momento da verificação biométrica ou para verificação de documentos.</string>
    <string name="camera_access_button_text">LIBERAR O ACESSO</string>
    <string name="back_button_description">botão voltar</string>
    <string name="back_button_text">VOLTAR</string>
    <string name="ok_icon_description">ícone de ok</string>
    <string name="ok_dialog_text">Verificação concluída!</string>
    <string name="error_icon_description">ícone de erro</string>
    <string name="error_dialog_text">Não conseguimos captar seu movimento.</string>
    <string name="retry_button_text">TENTAR NOVAMENTE</string>
    <string name="error_dialog_title">Ops!</string>
</resources>